--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,6 @@
  <div class="loading-overlay">
     <div class="loading-spinner"></div>
 </div>
-
 <header>
     <div class="header-container">
         <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.svg" alt="OKTik" style="float:left;"></a>
@@ -25,7 +24,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <nav class="nav-menu" id="nav-menu">
-            <a href="#home" class="nav-link active">Home</a>
+            <a href="#" class="nav-link active">Home</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#products" class="nav-link">Products</a>
             <a href="#services" class="nav-link">Services</a>
@@ -36,127 +35,130 @@
         </nav>
     </div>
 </header>
-
 <main>
-    <section id="home" class="hero-slider hero-style section home">
-        <div class="swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="slide-inner slide-bg-image" data-background="../photos/hero/01.png" data-background-mobile="../photos/hero/01Mobile.png">
-                <div class="container_hero">
-                  <div data-swiper-parallax="300" class="slide-title">
-                    <h2>Masters of Microsoft 365<br> 
-                        tenant-to-tenant migrations</h2>
+    
+    <section id="home" class="section home">
+        <div class="hero-slider hero-style">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="slide-inner slide-bg-image" data-background="../photos/hero/01.png" data-background-mobile="../photos/hero/01Mobile.png">
+                      <div class="container_hero">
+                        <div data-swiper-parallax="300" class="slide-title">
+                          <h2>Masters of Microsoft 365<br> 
+                              tenant-to-tenant migrations</h2>
+                        </div>
+                        <div data-swiper-parallax="400" class="slide-text">
+                          <p>
+                              OKTIK are Migration Masters. We simplify complex migrations and greatly reduce costs while minimising user disruption. Additionally, our ONETIK toolset offers our customers the chance to rapidly inventory their environment to optimise license usage, inventory platform in readiness for transition, or perform enhanced asset management.
+                          </p>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div data-swiper-parallax="500" class="slide-btns">
+                          <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
+                              <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end slide-inner -->
                   </div>
-                  <div data-swiper-parallax="400" class="slide-text">
-                    <p>
-                        OKTIK are Migration Masters. We simplify complex migrations and greatly reduce costs while minimising user disruption. Additionally, our ONETIK toolset offers our customers the chance to rapidly inventory their environment to optimise license usage, inventory platform in readiness for transition, or perform enhanced asset management.
-                    </p>
+                  <div class="swiper-slide">
+                    <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png" data-background-mobile="../photos/hero/02Mobile.png">
+                      <div class="container_hero">
+                        <div data-swiper-parallax="300" class="slide-title">
+                          <img src="../photos/slider OneTik Logo 1.png" alt="">
+                        </div>
+                        <div class="row_space"></div>
+                        <div data-swiper-parallax="400" class="slide-text">
+                          <h1>tenant to tenant Migrations,<br> 
+                              AUTOMATED windows upgrade projects</h1>
+                              <p class="uppercase"> ONETIK is a fully Co-sell <br>
+                              transactable SaaS solution</p>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div data-swiper-parallax="500" class="slide-btns">
+                          <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
+                              <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end slide-inner -->
                   </div>
-                  <div class="clearfix"></div>
-                  <div data-swiper-parallax="500" class="slide-btns">
-                    <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
-                        <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                    </a>
-                  </div>
+                  <div class="swiper-slide">
+                      <div class="slide-inner slide-bg-image" data-background="../photos/hero/03.png" data-background-mobile="../photos/hero/03Mobile.png">
+                        <div class="container_hero">
+                          <div data-swiper-parallax="300" class="slide-title">
+                              <img src="../photos/slider OneTik Logo 1.png" alt="">
+                          </div>
+                          <div class="row_space"></div>
+                          <div data-swiper-parallax="400" class="slide-text">
+                            <h1>ONETIK Inventory</h1>
+                            <p class="uppercase">Rapidly identify your environment <br> readiness for migration or upgrade</p>
+                          </div>
+                          <div class="clearfix"></div>
+                          <div data-swiper-parallax="500" class="slide-btns">
+                              <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
+                                  <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                              </a>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end slide-inner -->
+                    </div>
+                  <div class="swiper-slide">
+                      <div class="slide-inner slide-bg-image" data-background="../photos/hero/04.png" data-background-mobile="../photos/hero/04Mobile.png">
+                        <div class="container_hero">
+                          <div data-swiper-parallax="300" class="slide-title">
+                              <img src="../photos/slider OneTik Logo 1.png" alt="">
+                          </div>
+                          <div class="row_space"></div>
+                          <div data-swiper-parallax="400" class="slide-text">
+                            <h1>ONETIK Tenant Migrator</h>
+                            <p class="uppercase">Orchestrate and Automate the <br> transition FOR all Azure services</p>
+                          </div>
+                          <div class="clearfix"></div>
+                          <div data-swiper-parallax="500" class="slide-btns">
+                              <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
+                                  <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                              </a>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end slide-inner -->
+                    </div>
+                  <div class="swiper-slide">
+                      <div class="slide-inner slide-bg-image" data-background="../photos/hero/05.png" data-background-mobile="../photos/hero/05Mobile.png">
+                        <div class="container_hero">
+                          <div data-swiper-parallax="300" class="slide-title">
+                           <img src="../photos/slider OneTik Logo 1.png" alt="">
+                          </div>
+                          <div class="row_space"></div>
+                          <div data-swiper-parallax="400" class="slide-text">
+                            <h1>ONETIK Asset Management</h1>
+                            <p class="uppercase"> Monitor and report on Asset location,<br> health and status</p>
+                          </div>
+                          <div class="clearfix"></div>
+                          <div data-swiper-parallax="500" class="slide-btns">
+                              <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg">
+                                  <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                              </a>
+                          </div>
+                          
+                        </div>
+                      </div>
+                      <!-- end slide-inner -->
+                    </div>
                 </div>
+                <!-- end swiper-wrapper -->
+                <!-- swipper controls -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
               </div>
-              <!-- end slide-inner -->
-            </div>
-            <div class="swiper-slide">
-              <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png" data-background-mobile="../photos/hero/02Mobile.png">
-                <div class="container_hero">
-                  <div data-swiper-parallax="300" class="slide-title">
-                    <img src="../photos/slider OneTik Logo 1.png" alt="">
-                  </div>
-                  <div class="row_space"></div>
-                  <div data-swiper-parallax="400" class="slide-text">
-                    <h1>tenant to tenant Migrations,<br> 
-                        AUTOMATED windows upgrade projects</h1>
-                        <p class="uppercase"> ONETIK is a fully Co-sell <br>
-                        transactable SaaS solution</p>
-                  </div>
-                  <div class="clearfix"></div>
-                  <div data-swiper-parallax="500" class="slide-btns">
-                    <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
-                        <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <!-- end slide-inner -->
-            </div>
-            <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/03.png" data-background-mobile="../photos/hero/03Mobile.png">
-                  <div class="container_hero">
-                    <div data-swiper-parallax="300" class="slide-title">
-                        <img src="../photos/slider OneTik Logo 1.png" alt="">
-                    </div>
-                    <div class="row_space"></div>
-                    <div data-swiper-parallax="400" class="slide-text">
-                      <h1>ONETIK Inventory</h1>
-                      <p class="uppercase">Rapidly identify your environment <br> readiness for migration or upgrade</p>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div data-swiper-parallax="500" class="slide-btns">
-                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
-                            <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                        </a>
-                    </div>
-                  </div>
-                </div>
-                <!-- end slide-inner -->
-              </div>
-            <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/04.png" data-background-mobile="../photos/hero/04Mobile.png">
-                  <div class="container_hero">
-                    <div data-swiper-parallax="300" class="slide-title">
-                        <img src="../photos/slider OneTik Logo 1.png" alt="">
-                    </div>
-                    <div class="row_space"></div>
-                    <div data-swiper-parallax="400" class="slide-text">
-                      <h1>ONETIK Tenant Migrator</h>
-                      <p class="uppercase">Orchestrate and Automate the <br> transition FOR all Azure services</p>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div data-swiper-parallax="500" class="slide-btns">
-                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
-                            <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                        </a>
-                    </div>
-                  </div>
-                </div>
-                <!-- end slide-inner -->
-              </div>
-            <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/05.png" data-background-mobile="../photos/hero/05Mobile.png">
-                  <div class="container_hero">
-                    <div data-swiper-parallax="300" class="slide-title">
-                     <img src="../photos/slider OneTik Logo 1.png" alt="">
-                    </div>
-                    <div class="row_space"></div>
-                    <div data-swiper-parallax="400" class="slide-text">
-                      <h1>ONETIK Asset Management</h1>
-                      <p class="uppercase"> Monitor and report on Asset location,<br> health and status</p>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div data-swiper-parallax="500" class="slide-btns">
-                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg">
-                            <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                        </a>
-                    </div>
-                    
-                  </div>
-                </div>
-                <!-- end slide-inner -->
-              </div>
-          </div>
-          <!-- end swiper-wrapper -->
-          <!-- swipper controls -->
-          <div class="swiper-pagination"></div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
         </div>
+        
     </section>
     <section id="about" class="section about">
         <div class="container ">
@@ -263,7 +265,7 @@
                         <div class="col">
                             <ul>
                                 <li> <img src="../photos/logo/cocacola logo.png" alt="Coca-Cola" ></li>
-                                <li><button class="side-button">Read the case study</button></li>
+                                <li><a href="#study" class="side-button">Read the case study</a></li>
                             </ul>
                         </div>
                     </div>
@@ -982,6 +984,7 @@ visit the office
     <section id="contact" class="contact section">
         
         <div class="container">
+           
             
             <div class="row">
                 <div class="col subheading text-uppercase text-center">
@@ -989,33 +992,36 @@ visit the office
                 </div>
             </div>
             <div class="row_space_in"></div>
-            <div class="row form ">
-                <div class="col">
-                    <div class="row contact-input">
-                        <label for="name">Name</label>
-                        <input type="text" placeholder="">
-                    </div>
-
-                    <div class="row contact-input">
-                        <label for="surname">Surname</label>
-                        <input type="text" placeholder="">
-                    </div>
-
-                    <div class="row contact-input">
-                        <label for="name">Email</label>
-                        <input type="email" placeholder="">
-                    </div>
-
-                    <div class="row contact-input">
-                        <label for="message">Message</label>
-                
-                        <textarea rows="4" cols="50" name="comment" form="usrform" placeholder=""></textarea>
-                    </div>
-
-                    <div class="row contact-button"><button>submit</button></div>
+            <form action="./connect.php" id="contact" name="emailContact" method="post">
+                <div class="row form ">
+                    <div class="col">
+                        <div class="row contact-input">
+                            <label for="First name">Name</label>
+                            <input type="text" class="form-control" name="firstName" required placeholder="">
+                        </div>
+    
+                        <div class="row contact-input">
+                            <label for="Last name">Surname</label>
+                            <input type="text" class="form-control" name="lastName" required placeholder="Last name">
+                        </div>
+    
+                        <div class="row contact-input">
+                            <label for="Email">Email</label>
+                            <input type="email" class="form-control testHieght" name="email" required placeholder="Email">
+                        </div>
+    
+                        <div class="row contact-input">
+                            <label for="message">Message</label>
                     
+                            <textarea rows="4" cols="50" id="message" name="message" form="usrform" placeholder=""></textarea>
+                        </div>
+    
+                        <div name="send" value="submit" type="submit" class="row contact-button"><button>submit</button></div>
+                        
+                    </div>
                 </div>
-            </div>
+            </form>
+            
         </div>
        
     </section>
