--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1002,12 +1002,12 @@ visit the office
     
                         <div class="row contact-input">
                             <label for="Last name">Surname</label>
-                            <input type="text" class="form-control" name="lastName" required placeholder="Last name">
+                            <input type="text" class="form-control" name="lastName" required placeholder="">
                         </div>
     
                         <div class="row contact-input">
                             <label for="Email">Email</label>
-                            <input type="email" class="form-control testHieght" name="email" required placeholder="Email">
+                            <input type="email" class="form-control testHieght" name="email" required placeholder="">
                         </div>
     
                         <div class="row contact-input">
