--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <nav class="nav-menu" id="nav-menu">
-            <a href="#" class="nav-link active">Home</a>
+            <a href="#" class="nav-link active home_to">Home</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#products" class="nav-link">Products</a>
             <a href="#services" class="nav-link">Services</a>
@@ -1031,11 +1031,21 @@ visit the office
 <footer>
     <div class="footer-container">
         <div class="row">
-            <div class="col">
+            <div class="col-4">
                 <img src="../photos/logo/OKTik Logo Final_OKTik White Logo.svg" alt="OKTik" >
             </div>
-            <div class="col">
+            <div class="col-8">
                 <div class="row text-align-left">
+                    <div class="col ">
+                        <h5>Cyprus</h5>
+                        <ul>
+                            <li> John Kennedy Avenue</li>
+                            <li>Suite 305 </li>
+                            <li>Nicosia CY 1087</li>
+                            <li>Cyprus</li>
+                        </ul>
+
+                    </div>
                     <div class="col ">
                         <h5>UK</h5>
                         <ul>
