push copy change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -163,8 +163,8 @@
     <section id="about" class="section about">
         <div class="container ">
             <div class="row">
-                <div class="col subheading text-uppercase text-center about-subtitle">
-                    <h1>Why WE ARE different</h1>
+                <div class="col subheading  text-center about-subtitle">
+                    <h1>Why we are different</h1>
                 </div>
             </div>
             <div class="row_space_in"></div>
@@ -302,7 +302,7 @@
             </div>
             <div class="row_space"></div>
             <div class="row">
-                <div class="col subheading text-uppercase">
+                <div class="col subheading ">
                     <h1>
                         Scenarios and use cases
                     </h1>
@@ -444,7 +444,7 @@
     <section id="products" class="section products">
         <div class="container">
             <div class="row">
-                <div class="col subheading text-uppercase">
+                <div class="col subheading ">
                     <h1>Products</h1>
                     <p>
                         The product suite comprises of:
@@ -498,9 +498,9 @@
             <div class="row_space"></div>
             <div class="row">
                 <div class="col">
-                    <button type="button" class="btn btn-primary btn-lg shiny-button">
+                    <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
                         <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="row_space"></div>
@@ -526,7 +526,7 @@
                             <div class="row_space"></div>
                             <div class="tab-content">
                               <div class="tab-pane " id="licenseManagement">
-                                <h1 class="text-uppercase">OneTik License Management</h1>
+                                <h1 class="">OneTik License Management</h1>
                                 <div class="row_space_in"></div>
                                 <p>
                                     Workplace priorities and productivity demands are always evolving. Often, Azure and
@@ -559,7 +559,7 @@
                               </div>
                               <div class="tab-pane" id="environmentInventory">
 
-                                <h1 class="text-uppercase">OneTik Environment Inventory</h1>
+                                <h1 class="">OneTik Environment Inventory</h1>
                                 <div class="row_space_in"></div>
                                 <p>Manual Windows upgrades to a user estate are both costly and time-consuming, and in
                                     planning for the immimnent Windows 10 and Exchange on-premise end of life in 2025,
@@ -582,7 +582,7 @@ visit the office
                               </div>
                               <div class="tab-pane" id="tenantMigrator">
                                 
-                                <h1 class="text-uppercase">OneTik Tenant Migrator</h1>
+                                <h1 class="">OneTik Tenant Migrator</h1>
                                 <div class="row_space_in"></div>
                                 <p>A merger, acquisition or divestiture determines the need for a complex workplace
                                     service migration.</p>
@@ -602,7 +602,7 @@ visit the office
                               </div>
                               <div class="tab-pane active" id="assetManagement">
                                 
-                                <h1 class="text-uppercase">ONETIK Asset Management</h1>
+                                <h1 class="">ONETIK Asset Management</h1>
                                 <div class="row_space_in"></div>
                                 <p>OKTIK  offers a white-label asset management solution. Enabling IT Asset Finance and Leasing companies  to brand the client interface as their own, enhancing brand visibility and reinforcing client loyalty.</p>
 
@@ -615,8 +615,8 @@ visit the office
                                         <li>Offer seamless migrations, Microsoft upgrades, device roll-outs, and comprehensive device management, significantly reducing complexity for your clients.</li>
                                         <li>Enable your clients to extend ONETIK’s endpoint management services to their entire device estate, financed or not, generating consistent and predictable additional revenue for Partners.</li>
                                     </ul>
-                                    <h3 class="text-uppercase">Features</h3>
-                                    <h3 class="text-uppercase">Asset Management:</h3>
+                                    <h3 class="">Features</h3>
+                                    <h3 class="">Asset Management:</h3>
                                     <ul>
                                         <li>Real-time asset tracking and inventory management</li>
                                         <li>Lifecycle management and reporting</li>
@@ -676,8 +676,8 @@ visit the office
     <section id="services" class="services section ">
         <div class="container ">
             <div class="row">
-                <div class="col subheading text-uppercase">
-                    <h1>SERVICES</h1>
+                <div class="col subheading ">
+                    <h1>Services</h1>
                 </div>
             </div>
             <div class="row_space_in"></div>
@@ -689,7 +689,7 @@ visit the office
             <div class="row_space"></div>
             <div class="row areas_benefits">
                 <div class="col">
-                    <h1 class="text-uppercase">OUR AREAS OF EXPERTISE</h1>
+                    <h1 class="">Our areas of expertise</h1>
                     <div class="row_space"></div>
                     <ul>
                         <li>Advanced Identity and AD, Entra ID Management and automation</li>
@@ -705,7 +705,7 @@ visit the office
                     </ul>
                 </div>
                 <div class="col">
-                    <h1 class="text-uppercase">Customer benefits</h1>
+                    <h1 class="">Customer benefits</h1>
                     <div class="row_space"></div>
                     <ul>
                         <li>Minimal disruption to users in transition</li>
@@ -727,7 +727,7 @@ visit the office
         <div class="container">
             <div class="card text-left">
                 <div class="row">
-                    <div class="col subheading text-uppercase">
+                    <div class="col subheading ">
                         <h1>User experience</h1>
                     </div>
                 </div>
@@ -785,7 +785,7 @@ visit the office
             <div class="row_space"></div>
             <div class="row">
                 <div class="col-10">
-                    <h3 class="subheading text-uppercase">A real end user example of a failed upgrade</h3>
+                    <h3 class="subheading ">A real end user example of a failed upgrade</h3>
                     <div class="row_space_in"></div>
                     <div class="inner-card-container">
                         <div class="img-card" >
@@ -800,10 +800,10 @@ visit the office
                     <!-- <div class="inner-card-container">
                         <div class="card blue-card " style="background-image: linear-gradient(#174887, #062E62);">
                             <div class="inner-blue-card">
-                                <h1 class="text-uppercase">Bill’s been saving all his<span> MOST IMPORTANT</span> files in a special 
+                                <h1 class="">Bill’s been saving all his<span> MOST IMPORTANT</span> files in a special 
                                     place for years.</h1>
                                     <div class="row_space"></div>
-                                <h3 class="text-uppercase">His desktop</h3> 
+                                <h3 class="">His desktop</h3> 
                                 <div class="row_space"></div>
                                 <p>
                                     Last weekend, Bill’s company
@@ -812,7 +812,7 @@ visit the office
                                     but sadly none of his files due to data loss through non-automated or poorly planned upgrades.
                                 </p>
                                 <div class="row_space"></div>
-                                <h3 class="text-uppercase">if only they’d used</h3>
+                                <h3 class="">if only they’d used</h3>
                                 <div class="row_space"></div>
                                 <img class="white_logo" src="../photos/OKTik Logo white.png" alt="OKTik">
                                 <img class="desktop" src="../photos/Desktop.png" alt="OKTik">
@@ -861,7 +861,7 @@ visit the office
     <section id="media" class="media section">
         <div class="container">
             <div class="row">
-                <div class="col subheading text-uppercase">
+                <div class="col subheading ">
                     <h1>Media and partners</h1>
                 </div>
             </div>
@@ -927,7 +927,7 @@ visit the office
     <section id="study" class="study section">
         <div class="container">
             <div class="row">
-                <div class="col-9 subheading text-uppercase next_cola">
+                <div class="col-9 subheading  next_cola">
                     <h1>Customer case study</h1>
                 </div>
                 <div class="col-3">
@@ -987,7 +987,7 @@ visit the office
            
             
             <div class="row">
-                <div class="col subheading text-uppercase text-center">
+                <div class="col subheading  text-center">
                     <h1>Contact us</h1>
                 </div>
             </div>
