--- a/views/index.ejs
+++ b/views/index.ejs
@@ -913,12 +913,8 @@ visit the office
                 </div>
                 <div class="col-3 side_text_style">
                     <div class="row">
-                        <div class="col"> <br><br><br><br><br><br><br><br><br>
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="col">
-                            <ul>
+                            <ul class="side_logos">
                                 <li>
                                     <div class="row"><img src="../photos/Microsoft_logo_(2012).png" alt=""></div>
                                     <div class="row"><img src="../photos/crayon-group-logo-vector.png" alt=""></div>
